Solved problems with text items and file uploads.